# TRSLLaVA

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: README.md  images.jsonl
src/trsllava/: cli.py  io_jsonl.py  paths.py
src/trsllava/datasets/: captions.py
src/trsllava/embed/: corpus_embed.py  openai_embed.py
src/trsllava/eval/: i2t.py  metrics.py  t2i.py
src/trsllava/rsrt/: convert.py  generate_openai.py  quality.py  schema.py
src/trsllava/vlm/: llava_next.py  openai_vlm.py  prompt.py
